--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,10 @@
 name: crop_image_widget
 description: "A widget to crop images."
-version: 0.0.1
-homepage:
+version: 0.0.2
+homepage: https://github.com/rozd/crop_image_widget
 
 environment:
   sdk: '>=3.4.1 <4.0.0'
-  flutter: ">=1.17.0"
 
 dependencies:
   flutter:
