--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>To select an image for cropping</string>
+    <key>NSCameraUsageDescription</key>
+    <string>To take a photo for cropping</string>
 </dict>
 </plist>
