--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: crop_image_widget
 description: "A Flutter widget for cropping sections of an image provided by an ImageProvider."
-version: 0.0.5
+version: 0.0.6
 homepage: https://github.com/rozd/crop_image_widget
 
 environment:
@@ -14,7 +14,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: any
   mockito: any
 
 flutter:
