--- a/.github/workflows/deploy_demo.yaml
+++ b/.github/workflows/deploy_demo.yaml
@@ -13,10 +13,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Install Flutter
+      - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          channel: stable
+      - run: flutter --version
 
       - name: Cache Flutter Dependencies
         uses: actions/cache@v3
