--- a/.github/workflows/deploy_demo.yaml
+++ b/.github/workflows/deploy_demo.yaml
@@ -33,7 +33,7 @@ jobs:
         working-directory: example
         run: |
           flutter config --enable-web
-          flutter build web --release --web-renderer canvaskit
+          flutter build web --release --web-renderer canvaskit --base-href /crop_image_widget/
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
