--- a/.github/workflows/deploy_demo.yaml
+++ b/.github/workflows/deploy_demo.yaml
@@ -12,6 +12,14 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+        with:
+          lfs: true
+
+      - name: Set up Git LFS
+        run: git lfs install
+
+      - name: Fetch LFS files
+        run: git lfs pull
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
