deploy: 36cc0624ab880c1fdf2c2012fd3ae8703c98a2f0

--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/bowl.jpg":["assets/bowl.jpg"],"assets/potato.jpg":["assets/potato.jpg"],"assets/sail-boat.png":["assets/sail-boat.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/bowl.jpg":["assets/bowl.jpg"],"assets/potato.jpg":["assets/potato.jpg"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
